--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,28 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Passo 1: Checkout do código
       - name: Checkout repositório
         uses: actions/checkout@v4
 
-      # Passo 2: Instalar o Pulumi CLI
       - name: Instalar Pulumi
         run: |
           curl -fsSL https://get.pulumi.com | sh
           echo "$HOME/.pulumi/bin" >> $GITHUB_PATH
 
-      # Passo 3: Configurar Python
       - name: Configurar Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      # Passo 4: Instalar dependências Python
       - name: Instalar dependências
         run: |
           pip install pulumi pulumi-aws
 
-      # Passo 5: Configurar credenciais AWS e Pulumi
       - name: Configurar credenciais
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -40,10 +35,10 @@ jobs:
         run: |
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          pulumi login --cloud-url https://app.pulumi.com --token $PULUMI_ACCESS_TOKEN
+          echo "PULUMI_ACCESS_TOKEN=$PULUMI_ACCESS_TOKEN" >> $GITHUB_ENV
+          pulumi login
 
-      # Passo 6: Executar pulumi up
       - name: Deploy com Pulumi
         run: |
-          pulumi stack select dev  # Ajusta pro teu stack, ex.: dev, prod
+          pulumi stack select dev  # Ajusta pro teu stack
           pulumi up --yes
