🐛 fix(ci): fix Logged in to pulumi.com as vec21 (https://app.pulumi.com/vec21) command in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,12 @@ jobs:
         run: |
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          echo "PULUMI_ACCESS_TOKEN=$PULUMI_ACCESS_TOKEN" >> $GITHUB_ENV
-          pulumi login
+          pulumi login --cloud-url https://app.pulumi.com
+          
 
       - name: Deploy com Pulumi
         run: |
           pulumi stack select dev  # Ajusta pro teu stack
           pulumi up --yes
+
+
